--- a/SlidingPuzzle/SlidingPuzzle.vcxproj.filters
+++ b/SlidingPuzzle/SlidingPuzzle.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="TileManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="UILabel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
